Fix find replace dialog
[skip ci]